// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled text input using disabled 1`] = `
<TextArea
  aria-label="disabled textarea"
  disabled={true}
  onChange={[MockFunction]}
  value="test textarea"
>
  <TextArea
    aria-label="disabled textarea"
    className=""
    disabled={true}
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    resizeOrientation="both"
    validated="default"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="disabled textarea"
      className="pf-c-form-control"
      disabled={true}
      onChange={[Function]}
      required={false}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`disabled text input using isDisabled 1`] = `
<TextArea
  aria-label="is disabled textarea"
  isDisabled={true}
  onChange={[MockFunction]}
  value="test textarea"
>
  <TextArea
    aria-label="is disabled textarea"
    className=""
    innerRef={null}
    isDisabled={true}
    isRequired={false}
    onChange={[MockFunction]}
    resizeOrientation="both"
    validated="default"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="is disabled textarea"
      className="pf-c-form-control"
      disabled={true}
      onChange={[Function]}
      required={false}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`horizontally resizable text area 1`] = `
<TextArea
  aria-label="horizontal resize textarea"
  onChange={[MockFunction]}
  required={true}
  resizeOrientation="horizontal"
  validated="error"
  value="test textarea"
>
  <TextArea
    aria-label="horizontal resize textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="horizontal"
    validated="error"
    value="test textarea"
  >
    <textarea
      aria-invalid={true}
      aria-label="horizontal resize textarea"
      className="pf-c-form-control pf-m-resize-horizontal"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`invalid text area 1`] = `
<TextArea
  aria-label="invalid textarea"
  onChange={[MockFunction]}
  required={true}
  validated="error"
  value="test textarea"
>
  <TextArea
    aria-label="invalid textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="both"
    validated="error"
    value="test textarea"
  >
    <textarea
      aria-invalid={true}
      aria-label="invalid textarea"
      className="pf-c-form-control"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`read only text input using isReadOnly 1`] = `
<TextArea
  aria-label="is read only textarea"
  isReadOnly={true}
  onChange={[MockFunction]}
  value="test textarea"
>
  <TextArea
    aria-label="is read only textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isReadOnly={true}
    isRequired={false}
    onChange={[MockFunction]}
    resizeOrientation="both"
    validated="default"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="is read only textarea"
      className="pf-c-form-control"
      onChange={[Function]}
      readOnly={true}
      required={false}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`read only text input using readOnly 1`] = `
<TextArea
  aria-label="read only textarea"
  onChange={[MockFunction]}
  readOnly={true}
  value="test textarea"
>
  <TextArea
    aria-label="read only textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    readOnly={true}
    resizeOrientation="both"
    validated="default"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="read only textarea"
      className="pf-c-form-control"
      onChange={[Function]}
      readOnly={true}
      required={false}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`simple text input 1`] = `
<TextArea
  aria-label="simple textarea"
  onChange={[MockFunction]}
  value="test textarea"
>
  <TextArea
    aria-label="simple textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    resizeOrientation="both"
    validated="default"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="simple textarea"
      className="pf-c-form-control"
      onChange={[Function]}
      required={false}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`validated text area error 1`] = `
<TextArea
  aria-label="validated textarea"
  onChange={[MockFunction]}
  required={true}
  validated="error"
  value="test textarea"
>
  <TextArea
    aria-label="validated textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="both"
    validated="error"
    value="test textarea"
  >
    <textarea
      aria-invalid={true}
      aria-label="validated textarea"
      className="pf-c-form-control"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`validated text area success 1`] = `
<TextArea
  aria-label="validated textarea"
  onChange={[MockFunction]}
  required={true}
  validated="success"
  value="test textarea"
>
  <TextArea
    aria-label="validated textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="both"
    validated="success"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="validated textarea"
      className="pf-c-form-control pf-m-success"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`validated text area warning 1`] = `
<TextArea
  aria-label="validated textarea"
  onChange={[MockFunction]}
  required={true}
  validated="warning"
  value="test textarea"
>
  <TextArea
    aria-label="validated textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    required={true}
    resizeOrientation="both"
    validated="warning"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="validated textarea"
      className="pf-c-form-control pf-m-warning"
      onChange={[Function]}
      required={true}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;

exports[`vertically resizable text area 1`] = `
<TextArea
  aria-label="vertical resize textarea"
  onChange={[MockFunction]}
  resizeOrientation="vertical"
  value="test textarea"
>
  <TextArea
    aria-label="vertical resize textarea"
    className=""
    innerRef={null}
    isDisabled={false}
    isRequired={false}
    onChange={[MockFunction]}
    resizeOrientation="vertical"
    validated="default"
    value="test textarea"
  >
    <textarea
      aria-invalid={false}
      aria-label="vertical resize textarea"
      className="pf-c-form-control pf-m-resize-vertical"
      onChange={[Function]}
      required={false}
      value="test textarea"
    />
  </TextArea>
</TextArea>
`;
